--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,10 @@
 {
   "name": "purescript-radox",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/danieljharvey/purescript-radox.git"
+  },
   "ignore": [
     "**/.*",
     "node_modules",
