--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "purescript-psci-support": "^4.0.0",
-    "purescript-spec": "^3.1.0"
+    "purescript-spec": "^3.1.0",
+    "purescript-js-timers": "^4.0.1"
   }
 }
